apps/system/trivy-operator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trivy-system
  labels:
    app.kubernetes.io/name: trivy-system
    app.kubernetes.io/instance: trivy-system-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
