apps/system/external-dns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/instance: external-dns-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.20.0@sha256:ddc7f4212ed09a21024deb1f470a05240837712e74e4b9f6d1f2632ff10672e7
          imagePullPolicy: IfNotPresent
          args:
            - --source=ingress
            - --source=traefik-proxy
            - --provider=cloudflare
            - --domain-filter=romanpeters.nl
            - --annotation-filter=external-dns=external
            - --registry=txt
            - --txt-owner-id=romanpeters-k3s
            - --txt-prefix=external-dns-
            - --policy=sync
            - --cloudflare-proxied
            - --default-targets=82.174.113.104
            - --force-default-targets
            - --interval=1m
            - --log-level=info
