apps/system/metallb-speaker-lbclass-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: speaker
  namespace: metallb-system
spec:
  template:
    spec:
      containers:
        - name: speaker
          args:
            - --port=7472
            - --log-level=info
            - --lb-class=metallb.universe.tf/metallb
