apps/system/traefik-dashboard-external-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`external.romanpeters.nl`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: romanpeters-nl-tls
