apps/system/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`traefik.romanpeters.nl`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: infrastructure
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: romanpeters-nl-tls
